Adds comments on preallocation.

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -80,4 +80,10 @@ Take the following traffic patterns into consideration:
     \end{itemize}
 \end{itemize}
 
+\subsection{Comments on preallocation of memory for data-structures}
+\begin{itemize}
+    \item It makes sense to preallocate, because the data
+    structures will be initialized once and then remain as is.
+\end{itemize}
+
 \end{document}
