--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -86,4 +86,21 @@ Take the following traffic patterns into consideration:
     structures will be initialized once and then remain as is.
 \end{itemize}
 
+\subsection{Tables}
+\begin{center}
+    \begin{tabular}{|l|c|c|c|c|c|c|}
+        \hline
+        Configuration   & $s$ & \# inodes & \# leaves & Mem (MiB) & Compilation (ms) & Rate (Mlps) \\ 
+        \hline
+        Radix           & -   & & & & & \\ 
+        \hline                           
+        Poptrie-basic   & $0$ & & & & & \\  
+        \hline                           
+        Poptrie-leafvec & $0$ & & & & & \\
+        \hline
+        Poptrie         & $0$ & & & & & \\
+        \hline
+    \end{tabular}
+\end{center}
+
 \end{document}
