--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -164,4 +164,21 @@ random with direct pointing (s = 0, 16, 18)}
     \item RIB: routing information base
 \end{itemize}
 
+\subsection{Tables}
+\begin{center}
+    \begin{tabular}{|l|c|c|c|c|c|c|}
+        \hline
+        Configuration   & $s$ & \# inodes & \# leaves & Mem (MiB) & Compilation (ms) & Rate (Mlps) \\ 
+        \hline
+        Radix           & -   & & & & & \\ 
+        \hline                           
+        Poptrie-basic   & $0$ & & & & & \\  
+        \hline                           
+        Poptrie-leafvec & $0$ & & & & & \\
+        \hline
+        Poptrie         & $0$ & & & & & \\
+        \hline
+    \end{tabular}
+\end{center}
+
 \end{document}
